--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gulp-unique-path",
   "version": "1.0.0",
   "description": "Gulp plugin, that remove duplicate files by relative path. ",
+  "repository": "https://github.com/alexeybondarenko/gulp-unique-path.git",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
